fix teacher avatar issues on course search page
add alt text and fix css issue causing top of avatar to be cut off

test plan:
- navigate to courses search page
- note that teacher avatars are round and the top is not cut off

fixes CNVS-28770

Reviewed-on: https://gerrit.instructure.com/77256
QA-Review: Jahnavi Yetukuri <jyetukuri@instructure.com>
Tested-by: Jenkins
Product-Review: Steven Burnett <sburnett@instructure.com>

--- a/app/stylesheets/bundles/account_course_user_search.scss
+++ b/app/stylesheets/bundles/account_course_user_search.scss
@@ -81,3 +81,10 @@
   height: 30px;
   margin: -1px 10px 1px 0;
 }
+
+.UserLink__Avatar {
+
+    img {
+        vertical-align: top;
+    }
+}
